syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.douyu.common.v1";
option java_outer_classname = "HelloWorldProtoV1";
option go_package = "common/v1;commonv1";

package common.v1;

// The request message containing the user's name.
message SayHelloRequest {
    // name ...
    string name = 1;
  }
  
  // The response message containing the greetings
  message SayHelloResponse {
    // Data ...
    message Data {
      // message ...
      string message = 1;
    }
  
    // error
    uint32 error = 1;
    // msg
    string msg = 2;
    // data ...
    Data data = 3;
  }