syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.douyu.helloworld.v1";
option java_outer_classname = "HelloWorldProtoV1";
option go_package = "helloworld/v1;helloworldv1";

package helloworld.v1;

import "common/v1/msg.proto";

// The greeting service definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello (common.v1.SayHelloRequest) returns (common.v1.SayHelloResponse) {}
}

